Completado el CRUD de sports con validación y test
